--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -17,23 +17,26 @@ a {
 html, body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
+  margin: 0px;
 }
 
-body {
-  max-width: 1600px;
-  max-height: 1000px;
+.container {
+  min-height: 7700px;
+  min-width: 1600px;
+  position: absolute;
 }
 
 .header {
   display: flex;
   flex-flow: column wrap;
 
-  width: 1600px;
+  width: 100%;
   height: 1000px;
 
   background-image: url('/images/Photo.png');
 
   .header-menu {
+    position: fixed;
     padding-top: 30px;
     font-family: $Lato;
     display: flex;
@@ -65,13 +68,16 @@ body {
       padding-right: 150px;
       a:first-child {
         color: #9f9fa0;
+        &:hover {
+          color: $blue;
+        }
       }
     }
   }
 }
 
 .text {
-  width: 750px;
+  width: 800px;
 
   display: inline-flex;
 
