--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,6 +5,7 @@
 // Colors
 $black: #26272d;
 $blue: #267df4;
+$grey: #f3f4f5;
 
 // Fonts
 $Lato: 'Lato';
@@ -37,10 +38,12 @@ html, body {
 
   .header-menu {
     position: fixed;
-    padding-top: 30px;
+    width: 100%;
+    padding: 20px 0px;
     font-family: $Lato;
     display: flex;
     flex-flow: row nowrap;
+    background-color: $grey;
     section {
       padding: 0px, 50px;
 
@@ -77,7 +80,9 @@ html, body {
 }
 
 .text {
-  width: 800px;
+  width: 50%;
+
+  padding-top: 100px;
 
   display: inline-flex;
 
@@ -97,6 +102,5 @@ html, body {
   a {
     padding-top: 10px;
     align-self: center;
-    width: 250px;
     }
 }
